@@ -1,5 +1,9 @@
 2005-01-11  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/UIDefaults.java (put): Handle value of null.
+
+2005-01-11  Michael Koch  <konqueror@gmx.de>
+
 	* java/awt/Robot.java,
 	java/awt/Scrollbar.java,
 	java/awt/print/PrinterJob.java,
